--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app2.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
